[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/UI/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/UI/fonts/SmallFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/blackhole.png" type="Texture" id=3]
[ext_resource path="res://assets/Card/3DCard.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_size = 5
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.152941, 0.211765, 1 )
border_width_top = 4
border_color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.921569, 0.337255, 0.294118, 1 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("CardTexture")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
params_depth_draw_mode = 3
albedo_texture = SubResource( 4 )

[sub_resource type="PlaneMesh" id=6]
resource_local_to_scene = true
material = SubResource( 5 )
size = Vector2( 2.5, 3.5 )

[sub_resource type="BoxShape" id=10]
extents = Vector3( 1.25, 0.1, 1.75 )

[sub_resource type="Animation" id=8]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 0.5 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.1, 1.1, 1.1 ) ]
}

[node name="Card" type="Area"]
transform = Transform( -8.74228e-08, 0, -2, 0, 2, 0, 2, 0, -8.74228e-08, 0, 2, 0 )
script = ExtResource( 4 )

[node name="CardTexture" type="Viewport" parent="."]
size = Vector2( 250, 350 )
transparent_bg = true
hdr = false
render_target_v_flip = true

[node name="CardBorder" type="PanelContainer" parent="CardTexture"]
margin_right = 250.0
margin_bottom = 350.0
rect_min_size = Vector2( 250, 350 )
rect_pivot_offset = Vector2( 125, 175 )
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CardTexture/CardBorder"]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 346.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="CardArt" type="TextureRect" parent="CardTexture/CardBorder/VBoxContainer"]
margin_right = 242.0
margin_bottom = 214.0
mouse_filter = 2
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="TextPanel" type="PanelContainer" parent="CardTexture/CardBorder/VBoxContainer"]
margin_top = 214.0
margin_right = 242.0
margin_bottom = 342.0
rect_min_size = Vector2( 0, 128 )
mouse_filter = 2
size_flags_vertical = 9
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="CardTexture/CardBorder/VBoxContainer/TextPanel"]
margin_top = 4.0
margin_right = 242.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/separation = 2

[node name="Label" type="Label" parent="CardTexture/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 45.0
size_flags_vertical = 1
text = "Black Hole"
align = 1

[node name="HSeparator" type="HSeparator" parent="CardTexture/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 242.0
margin_bottom = 51.0
mouse_filter = 2
custom_styles/separator = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="CardTexture/CardBorder/VBoxContainer/TextPanel/VBoxContainer"]
margin_top = 53.0
margin_right = 242.0
margin_bottom = 124.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "Destroy all [color=red]Ships[/color]."
text = "Destroy all Ships."
fit_content_height = true

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 6 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/RESET = SubResource( 8 )
anims/Swell = SubResource( 9 )
